syntax = "proto3";

option csharp_namespace = "CaloriesCalculator.Protos";

import "activity.proto";
import "sex.proto";
import "status.proto";

service Calculator {
  rpc CalculateTotal (CalculateBasicRequest) returns (CalculateTotalReply);
}

// The request message for basic calculations.
message CalculateBasicRequest {
  float weight = 1;
  float width = 2;
  uint32 age = 3;
  SexOrientation orientation = 4;
  ActivityLevel activity = 5;
  ReadingStatus state = 6;
}

// The response message containing the results of calculations.
message CalculateTotalReply {
  int32 basic = 1;
  int32 total = 2;
  string message = 3;
  ReadingStatus state = 6;
}