syntax = "proto3";

option csharp_namespace = "CaloriesCalculator.Protos";

enum SexOrientation {
	FEMALE = 0;
	MALE = 1;
}